<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ANPA</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="txt_news">Noticias</string>
    <string name="txt_tips">Consejos</string>
    <string name="txt_castration">Castraciones</string>
    <string name="txt_adoption">Perdidos</string>
    <string name="txt_donation">Yo Dono!</string>
    <string name="txt_contactus">Contáctenos</string>
    <string name="txt_description_image">Descripción imagen</string>
   
    <!-- donation -->
    <string name="txt_donation_description">La transacción al donar es el 100% segura, debido a quese realiza inmediatamente en la plataforma de Paypal. ¡Gracias por su colaboración! Para más información puedes visitar:</string>
    <string name="txt_donation_link">http://www.anpacostarica.org/done_aqui</string>
    <string name="txt_donation_text1">Deseo donar: $</string>
    <string name="bt_send_donation">¡Donar!</string>
    
    <!-- Castration -->
     <string name="txt_subtitle_castration_date">Fecha:</string>
     <string name="txt_subtitle_schedule">Horario:</string>
     <string name="txt_subtitle_doctor">Doctor:</string>
     <string name="txt_subtitle_attendant">Encargado:</string>
     <string name="txt_subtitle_amount">Monto:</string>
     <string name="txt_subtitle_info">Información Adicional:</string>
     <string name="bt_buton_How_arrive">¿Cómo llegar?</string>
    
     <!-- Tips -->     
     <string name="txt_breed_selected">Raza prueba</string>
     <string name="txt_subtitle_autor">Por</string>
     <string name="txt_breed_author">Por</string>     
     <string name="txt_public_fb">Compartir en Facebook</string>
     <string name="txt_add_tip">Agregar consejo</string>
     <string name="bt_buton_add_tip">Agregar consejo</string>
     
     
     
     <!-- Contacts -->
     <string name="txt_description_location">Avenida 8, Calle 17 y 19, Casa número 1722 - San José</string>
     <string name="txt_description_phone1">(506) 400-ANPA</string>
     <string name="txt_description_phone2">(506) 2255-2722</string>
     <string name="txt_description_mail1">info@anpacostarica.org</string>
     <string name="txt_description_mail2">educa@anpacostarica.org</string>
     <string name="txt_description_facebook">https://m.facebook.com/profile.php?id=101774234247</string>
     <string name="txt_description_twitter">https://twitter.com/anpacr</string>
     <string name="txt_description_webPage">www.anpacostarica.org/</string>
     
     
</resources>
