<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_title_breed_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_breed_selected"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/editxt_description_tip"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/tv_breed_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/txt_breed_author" />

        <EditText
            android:id="@+id/editxt_breed_author"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="20dp">

        <CheckBox
            android:id="@+id/ck_public_fb"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:paddingTop="5dp"
            android:text="@string/txt_public_fb" />

        <ImageView
            android:id="@+id/img_icon_facebook_tip"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:contentDescription="@string/txt_description_image"          
            android:src="@drawable/icon_facebook" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_add_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/red"
        android:textColor="@android:color/white"
        android:text="@string/txt_add_tip" />

</LinearLayout>