<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/anpa_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        
        <ImageView
        android:id="@+id/img_map"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/txt_description_image"
        android:src="@drawable/icon_map" />

        <TextView
            android:id="@+id/txt_description_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/txt_description_location"
            android:layout_margin="5dp"/>
   
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        
        <ImageView
        android:id="@+id/img_phone"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/txt_description_image"
        android:src="@drawable/icon_phone" />

         <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical"
        android:gravity="center_vertical">
        
        <TextView
            android:id="@+id/txt_description_phone1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:linksClickable="true"
            android:textSize="16sp"
            android:text="@string/txt_description_phone1"
            android:layout_margin="5dp"/>
        
        <TextView
            android:id="@+id/txt_description_phone2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:linksClickable="true"
            android:textSize="16sp"
            android:text="@string/txt_description_phone2"
            android:layout_margin="5dp"/>
      	</LinearLayout>
    </LinearLayout>
    
     
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        
        <ImageView
        android:id="@+id/img_mail"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/txt_description_image"
        android:src="@drawable/icon_mail" />

         <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical"
        android:gravity="center_vertical">
        
        <TextView
            android:id="@+id/txt_description_mail1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:linksClickable="true"
            android:textSize="16sp"
            android:text="@string/txt_description_mail1"
            android:layout_margin="5dp"/>
        
        <TextView
            android:id="@+id/txt_description_mail2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:linksClickable="true"
            android:textSize="16sp"
            android:text="@string/txt_description_mail2"
            android:layout_margin="5dp"/>
      	</LinearLayout>
    </LinearLayout>
    
      
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        
        <ImageView
        android:id="@+id/img_facebook"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/txt_description_image"
        android:src="@drawable/icon_facebook" />

        <TextView
            android:id="@+id/txt_description_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/txt_description_facebook"
            android:layout_margin="5dp"
            android:clickable="true"/>
   
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        
        <ImageView
        android:id="@+id/img_twitter"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/txt_description_image"
        android:src="@drawable/icon_twitter" />

        <TextView
            android:id="@+id/txt_description_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/txt_description_twitter"
            android:layout_margin="5dp"
            android:clickable="true"/>
   
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        
        <ImageView
        android:id="@+id/img_webPage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/txt_description_image"
        android:src="@drawable/icon_web" />

        <TextView
            android:id="@+id/txt_description_webPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/txt_description_webPage"
            android:layout_margin="5dp"
            android:clickable="true"/>
   
    </LinearLayout>
     
     
</LinearLayout>
